--- a/pom.xml
+++ b/pom.xml
@@ -13,14 +13,16 @@
     
     <!-- Maven Properties -->
     <maven-compiler.version>3.6.1</maven-compiler.version>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
     <maven-surefire.version>2.20</maven-surefire.version>
     
     <!-- JUnit Properties -->
     <junit.version>4.12</junit.version>
     
     <!-- Selenium Properties -->
-    <selenium-java.version>3.4.0</selenium-java.version>
-    <selenium.baseUrl>http://localhost:8080/</selenium.baseUrl>
+    <selenium-java.version>3.14.0</selenium-java.version>
+    <selenium.baseUrl>http://localhost:7777</selenium.baseUrl>
   </properties>
   
   <dependencies>
