--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     
     <!-- Selenium Properties -->
     <selenium-java.version>3.14.0</selenium-java.version>
-    <selenium.baseUrl>http://localhost:7777</selenium.baseUrl>
+    <selenium.baseUrl>${targetURL}</selenium.baseUrl>
   </properties>
   
   <dependencies>
